// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectEditor editLabel snapshot 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block;"
  >
    <button
      aria-label="edit the properties of the object"
      class="css-9nq87t-EditButton"
    >
      Click to edit
    </button>
  </div>
</DocumentFragment>
`;

exports[`ObjectEditor inline snapshot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-2qgnud"
    >
      <table>
        <tbody />
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ObjectEditor overview snapshot 1`] = `
<DocumentFragment>
  <div
    style="display: inline-block;"
  >
    <button
      aria-label="edit the properties of the object"
      class="css-9nq87t-EditButton"
    >
      edit...
    </button>
  </div>
</DocumentFragment>
`;
